--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon">
   <script src="papaparse.min.js"></script>
   <script src='./node_modules/jquery/dist/jquery.js'></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
   <!-- <script src="jquery-csv.js"></script> -->
   <link rel="stylesheet" type="text/css" href="./main.css">
