--- a/matchly-server/client/home/index.html
+++ b/matchly-server/client/home/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Matchly</title>
   <link rel='shortcut icon' href='data:image/x-icon;,' type='image/x-icon'>
-  <script src='https://code.jquery.com/jquery-2.1.4.min.js'></script>
+  <script src='/assets/jquery.min.js'></script>
   <script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js'></script>
 
   <!-- <script src='jquery-csv.js'></script> -->
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-<div class='container' id='main'></div>
+<div class='container-fluid' id='main'></div>
 
 </body>
 <script src='index.js'></script>
