--- a/matchly-server/client/home/index.html
+++ b/matchly-server/client/home/index.html
@@ -8,6 +8,7 @@
 
   <!-- <script src='jquery-csv.js'></script> -->
   <link rel='stylesheet' type='text/css' href='/assets/main.css'>
+  <link rel='stylesheet' type='text/css' href='/assets/default.css'>
   <link rel='stylesheet' type='text/css' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css'>
 
 
