cleaned up styles on login and register pages to have consistent headers and UI with rest of site

--- a/matchly-server/client/login/index.html
+++ b/matchly-server/client/login/index.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Matchly</title>
-  <script src='https://code.jquery.com/jquery-2.1.4.min.js'></script>
-  <link rel='stylesheet' type='text/css' href='/assets/main.css'>
 
-</head>
-<body>
+  <head>
+    <title>Matchly</title>
+    <link rel='shortcut icon' href='data:image/x-icon;,' type='image/x-icon'>
+    <script src='/assets/jquery.min.js'></script>
+    <script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js'></script>
 
-</body>
-<script src='/login/index.js'></script>
+    <!-- <script src='jquery-csv.js'></script> -->
+    <link rel='stylesheet' type='text/css' href='/assets/main.css'>
+    <link rel='stylesheet' type='text/css' href='/assets/default.css'>
+    <link rel='stylesheet' type='text/css' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css'>
+
+
+  </head>
+
+  <body>
+    <div id='main'></div>
+  </body>
+  <script src='/login/index.js'></script>
 
 </html>
