--- a/matchly-server/client/home/index.html
+++ b/matchly-server/client/home/index.html
@@ -3,7 +3,7 @@
 
   <head>
     <title>Matchly</title>
-    <link rel='shortcut icon' href='data:image/x-icon;,' type='image/x-icon'>
+    <link rel="shortcut icon" type="image/x-icon" href="assets/matchly-favicon.ico">
     <script src='/assets/jquery.min.js'></script>
     <script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js'></script>
 
