--- a/matchly-server/client/home/index.html
+++ b/matchly-server/client/home/index.html
@@ -6,6 +6,8 @@
     <link rel="shortcut icon" type="image/x-icon" href="assets/matchly-favicon.ico">
     <script src='/assets/jquery.min.js'></script>
     <script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js'></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+
 
     <!-- <script src='jquery-csv.js'></script> -->
     <link rel='stylesheet' type='text/css' href='/assets/main.css'>
